[gd_scene load_steps=5 format=3 uid="uid://dyk4w48v2tudo"]

[ext_resource type="Script" path="res://GUI.gd" id="1_ndpvw"]
[ext_resource type="Script" path="res://Bitboard.cs" id="2_tpv5b"]
[ext_resource type="Script" path="res://DataHandlerCS.cs" id="3_vqiuh"]
[ext_resource type="Script" path="res://GeneratePath.cs" id="4_bghcj"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ndpvw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="ChessBoard" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 648.0
offset_bottom = 648.0
color = Color(0.411765, 0.411765, 0.411765, 1)

[node name="BoardGrid" type="GridContainer" parent="ChessBoard"]
custom_minimum_size = Vector2(624, 624)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -312.0
offset_right = 312.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="TestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 68.0
offset_right = 957.0
offset_bottom = 134.0
theme_override_font_sizes/font_size = 40
text = "Test"

[node name="BitBoard" type="Node2D" parent="."]
script = ExtResource("2_tpv5b")

[node name="DataHandlerCS" type="Node2D" parent="."]
script = ExtResource("3_vqiuh")

[node name="GeneratePath" type="Node" parent="."]
script = ExtResource("4_bghcj")

[node name="TestPuzzle" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 147.0
offset_right = 958.0
offset_bottom = 219.0
theme_override_font_sizes/font_size = 40
text = "Puzzle"

[connection signal="pressed" from="TestButton" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="TestPuzzle" to="." method="_on_test_puzzle_pressed"]
